# KedroProject_Diabetes_Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.viz/: kedro_pipeline_events.json  stats.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters.yml  parameters_refit.yml
src/diabetes_prediction/: __init__.py  api.py  pipeline_registry.py  settings.py
src/diabetes_prediction/pipelines/data_engineering/: nodes.py  pipeline.py
src/diabetes_prediction/pipelines/inference/: nodes.py  pipeline.py
src/diabetes_prediction/pipelines/refit/: __init__.py  nodes.py  pipeline.py
src/diabetes_prediction/pipelines/training/: nodes.py  pipeline.py
tests/pipelines/refit/: test_pipeline.py
